--- a/demo4/demo4.html
+++ b/demo4/demo4.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="demo4.js" type="module"></script>
+    <script src="js/demo4bis.js"></script>
     <title>Document</title>
 </head>
 <body>
     <h1>Coucou</h1>
-    
+   
+    <script src="js/demo4ter.js"></script>
 </body>
 </html>
